[nobug] Update README.md for Eclipse build instructions
Fixed a few typos.  Updated the build instructions based on my experiences with importing
into an Eclipse workspace.

Bug: https://bugs.eclipse.org/bugs/show_bug.cgi?id=bugnumber
Signed-off-by: Eric Cloninger <ericc@pobox.com>